@@ -253,3 +253,4 @@
 20260108 ./var/www/cjdns/hia/watchlist/hia-scan-tcp.sh added.
 20260108 ./var/www/cjdns/hia/watchlist/hia-scan-udp.sh added.
 20260108 ./var/www/cjdns/hia/watchlist/pubk.sh added.
+20260108 ./var/www/cjdns/hia/watchlist/walk/l.sh added.
